# advent-of-code-2020

./: .gitignore  pyproject.toml
01/: p01.py
02/: p02.py
03/: p03.py
04/: p04.py
05/: p05.py
06/: p06.py
07/: p07.py
08/: p08.py
09/: p09.py
10/: p10.py
11/: p11.py
12/: p12_1.py  p12_2.py
13/: p13.py
14/: p14_1.py  p14_2.py
15/: p15.py
16/: p16_1.py  p16_2.py
17/: p17.py
18/: p18.py
19/: p19.py
20/: p20.py
21/: p21.py
22/: p22_1.py  p22_2.py
23/: p23.py
24/: p24.py
25/: p25.py
