[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = ""
authors = ["Riccardo Albertazzi <piano.vergato@gmail.com>, Luca De Luigi <lucadeluigi91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

numpy = "^1.19.4"
pyparsing = "^2.4.7"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
